--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  
+  #firebase dependencies
   firebase_core:
+  firebase_auth:
+  cloud_firestore:
+  firebase_storage:
+  firebase_messaging:
+  google_sign_in:
+
 
 dev_dependencies:
   flutter_test:
