--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.3
   modal_progress_hud_nsn: ^0.5.1
+  image_picker: ^1.0.7
 
   #firebase dependencies
   firebase_core:
