--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   modal_progress_hud_nsn: ^0.5.1
   image_picker: ^1.0.7
+  cached_network_image: ^3.3.1
 
   #firebase dependencies
   firebase_core:
